# fileengine_convert_search_ai

./: .env.example  .gitignore  Containerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
design_documents/: CHAT_WITH_AI.md  DEVELOPMENT_PLAN.md  EVENT_CONTRACT.md  GENERATE_REPORT_TO_TARGET.md  MCP_INTEGRATIONS.md  REPLICATION_FAILOVER.md  SPECIFICATION.md  WEB_SEARCH_TOOL_PLAN.md  XEOKIT3D_PLUGIN.md
migrations/: 0001_baseline.sql
src/convert_search_ai/: __init__.py  _client.py  api.py  app.py  audit.py  bridge_auth.py  cache_invalidation.py  chat.py  chunking.py  config.py  consent.py  conversations.py  core_client.py  crypto.py  db.py  events.py  failover.py  guards.py  http_auth.py  indexing.py  ingest.py  jwt_verify.py  ldap_auth.py  llm_tools.py  mcp_client.py  mcp_oauth.py  mcp_store.py  mime.py  onlyoffice.py  permissions.py  pipeline.py  provenance.py  reconcile.py  renditions.py  retrieval.py  schema.py  search.py  store.py  token_store.py  tools.py  (+2 more)
src/convert_search_ai/plugins/: __init__.py  base.py  doc_preview.py  html.py  image.py  markdown_preview.py  office.py  pdf.py  pdf_backends.py  registry.py  source_preview.py  text.py  video.py  xeokit3d.py
src/convert_search_ai/providers/: __init__.py  base.py  chat.py  embeddings.py  factory.py  websearch.py
src/convert_search_ai/routers/: __init__.py  mcp_admin.py  onlyoffice.py
tests/: conftest.py  fakes.py  test_api_m2.py  test_api_m3.py  test_app.py  test_audit.py  test_auth_coordination_live.py  test_bridge_auth.py  test_cache_invalidation.py  test_chat.py  test_chat_tools.py  test_chunking.py  test_config.py  test_consent.py  test_conversations.py  test_convert_endpoint.py  test_core_client.py  test_cors.py  test_create_document_tool.py  test_db_failover.py  test_doc_previews.py  test_document_tools.py  test_e2e_live.py  test_failover.py  test_file_refs.py  test_guards.py  test_hardening.py  test_html_plugin.py  test_http_auth.py  test_indexing_retrieval.py  test_ingest.py  test_jwt_verify.py  test_ldap_failover.py  test_live_smoke.py  test_llm_tools.py  test_m1_live.py  test_markdown_preview.py  test_mcp_admin.py  test_mcp_chat.py  test_mcp_client.py  (+25 more)
tests/fixtures/3d/: SOURCES.md  box.iges  box.step  box.wrl  box_far.step  pillar_ifc4.ifc
