[project]
name = "convert-search-ai"
version = "0.3.0"
description = "FileEngine conversion, search, and vector-backed RAG chat microservice (permission-gated)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "ldap3>=2.9",
    "grpcio>=1.50",
    "protobuf>=4.21",
    "pydantic>=2.0",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
    "Pygments>=2.17",     # source/text language detection + syntax highlighting
    "reportlab>=4.0",     # first-page colour-coded PDF for the text preview
]
# The FileEngine Python client (`fileengine`, from ../python_interface) is reused
# at runtime for gRPC core access (permission checks + rendition writes), exactly
# as the MCP server does. Install it (`pip install ../python_interface`) or rely
# on the sibling-checkout bootstrap in convert_search_ai._client.

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "httpx>=0.27"]
# Structure/table-preserving PDF→Markdown backends (see plugins/pdf_backends).
# `pdf` is the light MIT default; the others are higher-fidelity opt-ins.
pdf = ["pdfplumber>=0.11"]                 # MIT, light — solid tables
pdf-docling = ["docling>=2.0"]             # MIT, heavy (ML) — best structure+tables
pdf-pymupdf = ["pymupdf4llm>=0.0.17"]      # NOTE: PyMuPDF is AGPL-3.0
# Pluggable AI providers (DEVELOPMENT_PLAN §7) — install the ones a deployment uses.
anthropic = ["anthropic>=0.40"]
voyage = ["voyageai>=0.2"]
openai = ["openai>=1.0"]
# Web search tool backend (WEB_SEARCH_TOOL_PLAN) — DuckDuckGo, no API key.
websearch = ["ddgs>=6.0"]

[project.scripts]
convert-search-ai = "convert_search_ai.app:main"
convert-search-ai-worker = "convert_search_ai.ingest:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = ["live: integration test that needs LDAP + the gRPC core reachable"]
